--- a/config.json
+++ b/config.json
@@ -7,14 +7,11 @@
 "homeUrl":"http://blog.thebag.us.kg",
 "email":"swpdnb@outlook.com",
 "startSite":"02/16/2015",
-"filingNum":"萌ICP备20241146号 喵喵ICP备案 20240114号",
+"filingNum":"萌ICP备20241146号",
 "onePageListNum":15,
 "singlePage":["about"],
-"iconList":{"icpmeng":"M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13Z"},
-"exlink":{"icpmeng":"https://icp.gov.moe/?keyword=20241146"},
-"singlePage":["about"],
-"iconList":{"icpmiao":"M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13Z"},
-"exlink":{"icpmiao":"https://nyaicp.xyz/?id=20240114"},
+"iconList":{"ICP":"M0 11.25c0-.966.784-1.75 1.75-1.75h12.5c.966 0 1.75.784 1.75 1.75v3A1.75 1.75 0 0 1 14.25 16H1.75A1.75 1.75 0 0 1 0 14.25Zm2-9.5C2 .784 2.784 0 3.75 0h8.5C13.216 0 14 .784 14 1.75v5a1.75 1.75 0 0 1-1.75 1.75h-8.5A1.75 1.75 0 0 1 2 6.75Zm1.75-.25a.25.25 0 0 0-.25.25v5c0 .138.112.25.25.25h8.5a.25.25 0 0 0 .25-.25v-5a.25.25 0 0 0-.25-.25Zm-2 9.5a.25.25 0 0 0-.25.25v3c0 .138.112.25.25.25h12.5a.25.25 0 0 0 .25-.25v-3a.25.25 0 0 0-.25-.25Z M7 12.75a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Zm-4 0a.75.75 0 0 1 .75-.75h.5a.75.75 0 0 1 0 1.5h-.5a.75.75 0 0 1-.75-.75Z"},
+"exlink":{"ICP":"https://icp.gov.moe/?keyword=20240114"},
 "commentLabelColor":"#006b75",
 "yearColorList":["#bc4c00", "#0969da", "#1f883d", "#A333D0"],
 "i18n":"CN",
